@@ -16,6 +16,11 @@
      ServerAlive and ClientAlive timers.  Prevents dropping a connection
      when these are enabled but the peer does not support our keepalives.
      bz #1307, ok djm@.
+   - dtucker@cvs.openbsd.org 2007/12/28 22:34:47
+     [clientloop.c]
+     Use the correct packet maximum sizes for remote port and agent forwarding.
+     Prevents the server from killing the connection if too much data is queued
+     and an excessively large packet gets sent.  bz #1360, ok djm@.
 
 20071202
  - (dtucker) [configure.ac] Enable -fstack-protector-all on systems where
@@ -3477,4 +3482,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4809 2007/12/28 15:45:07 dtucker Exp $
+$Id: ChangeLog,v 1.4810 2007/12/28 22:37:10 dtucker Exp $
